--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <div class="col-lg-6 tm-col-home mb-4">
                                 <div class="tm-text-container">
                                     <div class="tm-icon-container mb-5 mr-0 ml-auto">
-                                        <i class="fas fa-satellite-dish fa-4x tm-text-primary"></i>
+                                        <img src="img/IMG-20250119-WA0010.jpg" alt="" style="height: 120px; width: 120px;">
                                     </div>                                
                                     <p>
                                         At AGW Studio, we believe architecture is more than just designing buildings—it's 
@@ -93,7 +93,7 @@
                             <div class="col-lg-6 tm-col-home mb-4">
                                 <div class="tm-text-container">
                                     <div class="tm-icon-container mb-5 mr-0 ml-auto">
-                                        <i class="fas fa-broadcast-tower fa-4x tm-text-primary"></i>
+                                        <img src="img/android-chrome-192x192.png" alt="" style="height: 120px; width: 120px; ">
                                     </div>                                 
                                     <p>
                                         AGW Studio is a premier architectural firm dedicated to transforming ideas into iconic structures. 
@@ -110,7 +110,8 @@
                         <div class="row tm-row-home">                            
                             <div class="tm-col-home tm-col-home-l">
                                 <div class="media mb-4">
-                                    <i class="fas fa-scroll fa-4x tm-post-icon tm-text-primary"></i>
+                                    <img src="img/arch (1).jpg" alt="" class="tm-post-icon">
+                                    <!-- <i class="fas fa-scroll fa-4x tm-post-icon tm-text-primary"></i> -->
                                     <div class="media-body">
                                         <a href="#" class="d-block mb-2 tm-text-primary tm-post-link">Architect</a>  
                                         <p>
@@ -119,7 +120,7 @@
                                     </div>                                    
                                 </div>
                                 <div class="media mb-4">
-                                    <i class="fas fa-cloud-sun fa-4x tm-post-icon tm-text-primary"></i>
+                                    <img src="img/arch (2).jpg" alt="" class="tm-post-icon">
                                     <div class="media-body">
                                         <a href="#" class="d-block mb-2 tm-text-primary tm-post-link">Development Consultant</a>  
                                         <p>
@@ -128,7 +129,7 @@
                                     </div>                                    
                                 </div>
                                 <div class="media mb-4">
-                                    <i class="fas fa-dove fa-4x tm-post-icon tm-text-primary"></i>
+                                    <img src="img/arch (3).jpg" alt="" class="tm-post-icon">
                                     <div class="media-body">
                                         <a href="#" class="d-block mb-2 tm-text-primary tm-post-link">Project Manager</a>  
                                         <p>
@@ -485,14 +486,15 @@
                                         <figcaption>
                                             <ul class="tm-social">
                                                 <li><a href="https://www.facebook.com/share/1BGm1Edr7f/" class="tm-social-link"><i class="fab fa-facebook"></i></a></li>
-                                                <li><a href="https://whatsapp.com/dl/" class="tm-social-link"><i class="fab fa-whatsapp"></i></a></li>
+                                                <li><a href="https://wa.me/qr/KR5EJZCAGCQYJ1" class="tm-social-link"><i class="fab fa-whatsapp"></i></a></li>
                                                 <li><a href="https://www.instagram.com/agw_studio?igsh=MXhmZWF2cG5hOW1kcg==" class="tm-social-link"><i class="fab fa-instagram"></i></a></li>
                                             </ul>
                                         </figcaption>
                                     </figure>
                                     <div class="tm-about-text">
                                         <h3 class="mb-3 tm-text-primary tm-about-title">Abdulwaris Abdulganiy</h3>
-                                        <p>A Passionate architect and Footballer</p>
+                                        <p>A visionary founder and CEO of AGW Studio, also an accomplished architect with a passion for innovative, sustainable design. </p>
+                                        <p>With many years of experience, Abdulwaris has built AGW Studio into a trusted name in architecture, blending creativity with functionality to deliver timeless spaces. His leadership drives the firm’s mission to create designs that inspire, connect, and stand the test of time.</p>
                                         <h4 class="tm-text-secondary tm-about-subtitle">Founder and CEO</h4>
                                     </div>
                                 </div>
@@ -537,15 +539,15 @@
                                 <!-- Map -->
                                 <div class="mapouter mb-4">
                                     <div class="gmap_canvas">
-                                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.2492903478565!2d3.902042175000332!3d7.32587249268237!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x10398e02ee66c2f1%3A0xd317fb6eef079128!2sSanyo%2C%20Ibadan%20110115%2C%20Oyo!5e0!3m2!1sen!2sng!4v1737307426102!5m2!1sen!2sng" width="100%" height="520" style="border:0;" 
-                                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3956.680485948619!2d3.8674760750009636!3d7.389655292620067!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x10398d1b485db9c9%3A0x15cc286ba31e98b3!2sUncle%20K%20Ariyo%20Curtain%20Stores!5e0!3m2!1sen!2sng!4v1737356555550!5m2!1sen!2sng"
+                                         width="100%" height="520" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                     </div>
                                 </div>
             
                                 <!-- Address -->
                                 <address class="mb-4">
-                                    Head Office : Aleshinloye Ibadan.<br>
-                                    Branch Office : Sanyo Ibadan.
+                                    Head Office : Uncle K Ariyo Curtain Store,<br>Aleshinloye Market, Jericho, Ibadan.<br>
+                                    Branch Office : No 23 Mosorire street Sanyo area Ibadan.
                                 </address>
             
                                 <!-- Links -->
@@ -565,7 +567,7 @@
                                 </ul>
                                 <ul class="tm-contact-social">
                                     <li><a href="https://www.facebook.com/share/1BGm1Edr7f/" class="tm-social-link"><i class="fab fa-facebook"></i></a></li>
-                                    <li><a href="https://whatsapp.com/dl/" class="tm-social-link"><i class="fab fa-whatsapp"></i></a></li>
+                                    <li><a href="https://wa.me/qr/KR5EJZCAGCQYJ1" class="tm-social-link"><i class="fab fa-whatsapp"></i></a></li>
                                     <li><a href="https://www.instagram.com/agw_studio?igsh=MXhmZWF2cG5hOW1kcg==" class="tm-social-link"><i class="fab fa-instagram"></i></a></li>
                                     <li><a href="https://www.tiktok.com/@agwstudio3?_t=ZM-8tCWIVNGQOz&_r=1" class="tm-social-link"><i class="fab fa-tiktok"></i></a></li>
                                 </ul>
