--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                         <hr class="mb-5">
                         <div class="row">
                             <div class="col-xl-6 tm-contact-col-l mb-4">
-                                <form id="contact-form" action="mailto:abdulganiyyabdulwaris306@gmail.com" method="POST" class="tm-contact-form">
+                                <form id="contact-form" action="mailto:abdulganiyyabdulwaris306@gmail.com" method="POST" enctype="text/plain" class="tm-contact-form">
                                     <div class="form-group">
                                         <input type="text" name="name" class="form-control rounded-0" placeholder="Name" required />
                                     </div>
