--- a/index.html
+++ b/index.html
@@ -527,9 +527,9 @@
                                     <div class="form-group">
                                         <select class="form-control" id="contact-select" name="inquiry">
                                             <option value="-">Subject</option>
-                                            <option value="sales">Architectural Design</option>
-                                            <option value="creative">Project Management</option>
-                                            <option value="uiux">Development Consultancy</option>
+                                            <option value="Architectural Design">Architectural Design</option>
+                                            <option value="Project Management">Project Management</option>
+                                            <option value="Development Consultancy">Development Consultancy</option>
                                         </select>
                                     </div>
                                     <div class="form-group">
