--- a/index.html
+++ b/index.html
@@ -519,13 +519,13 @@
                             <div class="col-xl-6 tm-contact-col-l mb-4">
                                 <form id="contact-form"  action="" class="tm-contact-form">
                                     <div class="form-group">
-                                        <input type="text" id="name" name="name" class="form-control rounded-0" placeholder="Name" required />
+                                        <input type="text" id="name" name="Name" class="form-control rounded-0" placeholder="Name" required />
                                     </div>
                                     <div class="form-group">
-                                        <input type="email" id="email" name="email" class="form-control rounded-0" placeholder="Email" required />
+                                        <input type="email" id="email" name="Email" class="form-control rounded-0" placeholder="Email" required />
                                     </div>
                                     <div class="form-group">
-                                        <select class="form-control" id="contact-select" name="inquiry">
+                                        <select class="form-control" id="contact-select" name="Subject">
                                             <option value="-">Subject</option>
                                             <option value="Architectural Design">Architectural Design</option>
                                             <option value="Project Management">Project Management</option>
@@ -533,9 +533,8 @@
                                         </select>
                                     </div>
                                     <div class="form-group">
-                                        <textarea rows="8" id="message" name="message" class="form-control rounded-0" placeholder="Message" required=></textarea>
+                                        <textarea rows="8" id="message" name="Message" class="form-control rounded-0" placeholder="Message" required=></textarea>
                                     </div>
-            
                                     <div class="form-group tm-text-right">
                                         <button type="submit" onclick="sendToWhatsapp()" class="btn btn-primary">Send</button>
                                     </div>
