--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                                     </div>
                                     <div class="form-group">
                                         <select class="form-control" id="contact-select" name="Subject">
-                                            <option value="-">Subject</option>
+                                            <option value="Subject">Subject</option>
                                             <option value="Architectural Design">Architectural Design</option>
                                             <option value="Project Management">Project Management</option>
                                             <option value="Development Consultancy">Development Consultancy</option>
