--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@ function sendToWhatsapp(){
   var url = "https://wa.me/" + number + "?text="
   + "Name : " +name+ "%0a"
   + "Email : " +email+ "%0a"
-    + "Inquiry : " + inquiry+ "%0a"
+    + "Subject : " + inquiry+ "%0a"
   + "Message : " +message+ "%0a%0a";
 
   window.open(url, '_blank').focus();
